--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
 <footer>
     <p>Source: <a href="http://en.wikipedia.org/wiki/The_Lord_of_the_Rings_(film_series)">Wikipedia</a></p>
-    <img src="css/images/lotrlogo.png" alt="Lord Of The Rings Ring" class="logo">
+    <img src="css/images/lotrlogo.png" alt="Lord Of The Rings Ring" class="logotwo">
 </footer>  
     
 </body>
